post_script/services/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payper-qa-ingress
  namespace: qa
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: paypr-qa
spec:
  tls:
  - hosts:
    - qa-paypr-ecommerce.sapidblue.in
    - qa-paypr-ecommerce-backend.sapidblue.in
    secretName: paypr-qa-tls
  rules:
  - host: "qa-paypr-ecommerce.sapidblue.in"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: pam-frontend
            port:
              number: 80
      - path: "/api/PAM"
        pathType: Prefix
        backend:
          service:
            name: pam-node
            port:
              number: 3000
      - path: "/api/RAM"
        pathType: Prefix
        backend:
          service:
            name: ram-node
            port:
              number: 3000
      - path: "/api/COMM"
        pathType: Prefix
        backend:
          service:
            name: comm-node
            port:
              number: 3000
  - host: "qa-paypr-ecommerce-backend.sapidblue.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pam-backend
            port:
              number: 8080
